# inventory_app

./: .env  Cargo.toml
src/: db.rs  main.rs  models.rs  routes.rs
