[package]
name = "inventory_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4" # Actix web framework
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
serde_json = "1" # For handling JSON data
dotenv = "0.15" # To manage environment variables
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "json"] } # ForPostgreSQL



